--- a/index_main.html
+++ b/index_main.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheets" href="style_main.css">
+    <title>Menu Principal</title>
+    <link rel="stylesheet" href="style_main.css">
 </head>
 <body>
     <header>
-        
+
     </header>
     <main>
 
