Eu apenas estilizei a logo.

--- a/index_main.html
+++ b/index_main.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Principal</title>
     <link rel="stylesheet" href="style_main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Headland+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Dutra Moveis</h1>
+        <h1 id="logo">Dutra Moveis</h1>
     </header>
     <main>
 
